The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2004.06.11 AP        Apply for some function and view property dialogs
    <li>2004-06-11 AP        Display server log
    <li>2004-06-08 AP        Allow Server Status & Maintenance windows to be resized to allow easy reading of data
    <li>2004-06-07 AP        changed connection loss handling
	<li>2004-06-07 AP        fix storing of existing files (didn't truncate)
	<li>2004-06-06 AP        GRANT wizard
	<li>2004-06-06 AP        ALTER AGGREGATE/FUNCTION/GROUP/LANGUAGE/SCHEMA/TRIGGER/USER RENAME TO for 7.4+
	<li>2004-06-04 AP        SQL Window: Try to preserve result column width
    <li>2004-06-04 AP        7.5 support: comment on cast/conversion/language
    <li>2004-06-04 AP        checks on column type changes
    <li>2004-05-28 AP        handle lost connections safely
    <li>2004-05-28 AP        fix server status not cleaning old connections
    <li>2004-05-28 AP        line numbers in function definition property dialog
    <li>2004-05-26 AP        warn when deleting superuser privilege
    <li>2004-05-10 DP        Generate function SQL correctly when the return type needs a schema specification
    <li>2004-05-04 DP        Prevent duplication of functional indexes
    <li>2004-03-30 AP   ***  no initial language selection (using system default)
    <li>2004-03-25 AP   ***  Allow initial selection of language "Default"
    <li>2004-03-24 AP        changed font handling to accept exotic weights
    <li>2004-03-17 AP        Updated sources for wx 2.5.1
    <li>2004-03-17 AP        Added Font Option