@@ -16,7 +16,8 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
-    <li>2004.06.11 AP        Apply for some function and view property dialogs
+    <li>2004-06-13 AP        fix "no schema" bug when database is initial database
+    <li>2004-06-11 AP        Apply for some function and view property dialogs
     <li>2004-06-11 AP        Display server log
     <li>2004-06-08 AP        Allow Server Status & Maintenance windows to be resized to allow easy reading of data
     <li>2004-06-07 AP        changed connection loss handling
